# wasm-lottery

./: .firebaserc  .gitignore  README.md  config.json  package.json  swanky.config.json  tsconfig.json
.firebase/: hosting.YnVpbGQ.cache
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  s3-merge.yml  s3-pr.yml  test.yml
artifacts/: lottery.contract  lottery.json
artifacts/lottery/1675711790105/: lottery.json  lottery.wasm
artifacts/lottery/1676292480814/: lottery.json
artifacts/lottery/1676299133678/: lottery.json  lottery.wasm
artifacts/lottery/1676301869208/: lottery.json  lottery.wasm
artifacts/lottery/1676301922659/: lottery.json  lottery.wasm
artifacts/lottery/1676303068937/: lottery.json  lottery.wasm
artifacts/lottery/1677772790095/: lottery.contract
artifacts/lottery/1678098780446/: lottery.contract
contracts/lottery/: Cargo.toml
contracts/lottery/src/: lib.rs
src/: App.tsx  Home.tsx  index.css
src/artifacts/: lottery.contract  lottery.contract.json  lottery.json
src/context/: ApiContext.tsx
src/hooks/: useContract.ts
src/typedContract/constructors/: lottery.ts
src/typedContract/shared/: utils.ts
src/typedContract/types-arguments/: lottery.ts
src/typedContract/types-returns/: lottery.ts
test/lottery/: flipper.test.ts
test/lottery/artifacts/: lottery.contract  lottery.json
test/lottery/typedContract/build-extrinsic/: lottery.ts
test/lottery/typedContract/data/: lottery.json
typedContract/data/: lottery.json
typedContract/event-types/: lottery.ts
typedContract/events/: lottery.ts
(+10 files in other folders)
