[package]
name = "lottery"
version = "0.1.0"
authors = ["Nikhil Ranjan"]
edition = "2021"

[dev-dependencies]
ink_e2e = "4.0.1"

[dependencies]
ink = { version = "~4.1.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
